# pdf-image-extract-

./: .gitignore  DEV-GUIDE.md  README-optimized.md  README.md  SEO-OPTIMIZATION-GUIDE.md  SETUP.md  next.config.js  package-lock.json  package.json  start-dev.bat  start-dev.sh  vercel.json
api/: app.py  app_safe.py  check_dependencies.py  pyproject.toml  requirements.txt
app/: favicon-links.html  globals.css  layout.tsx  page.tsx
lib/: seo-config.ts
public/: manifest.json  robots.txt  sitemap.xml
types/: index.ts
